[package]
name = "sol-balance-history"
version = "0.1.0"
edition = "2021"
description = "Runtime SOL Balance History Reconstruction via RPC"
repository = ""
license = ""

[dependencies]
helius = { git = "https://github.com/helius-labs/helius-rust-sdk" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
csv = "1.1"
anyhow = "1.0"
futures = "0.3"
dotenvy = "0.15"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
solana-commitment-config = "3.1.1"
solana-transaction-status = "3.1.12"
itertools = "0.14.0"
