[package]
name = "sol-balance-history"
version = "0.1.0"
edition = "2021"
description = "Runtime SOL Balance History Reconstruction via RPC"
repository = ""
license = ""

[dependencies]
helius = { git = "https://github.com/helius-labs/helius-rust-sdk" }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.0", features = ["derive"] }
chrono = "0.4"
csv = "1.1"
anyhow = "1.0"
futures = "0.3"
rayon = "1.7"
solana-sdk = "2"
